@@ -36,7 +36,7 @@ Description: GNU R package for Seamless R and C++ Integration
  to use than the equivalent low-level loop code. The "Rcpp-sugar" vignette
  gives an overview of the feature.
  .
- Several examples are included, and 785 unit tests in 357 unit test functions
+ Several examples are included, and 800 unit tests in 362 unit test functions 
  provide additional usage examples.
  .
  An earlier version of Rcpp, containing what we now call the 'classic Rcpp
